add css inline style color

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
 <h1 style="color: navy">My name is : Chinthaka Weerasekara</h1>
+<h1 style="color: gray">My address is : Pepiliyana</h1>
 
 </body>
 </html>
