add css inline style color in head tag

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+
+    <style type="text/css">
+        h1{/* Selectors */
+            color: maroon;
+        }
+    </style>
 </head>
 <body>
 
-<h1 style="color: navy">My name is : Chinthaka Weerasekara</h1>
-<h1 style="color: gray">My address is : Pepiliyana</h1>
+<h1>My name is : Chinthaka Weerasekara</h1>
+<h1>My address is : Pepiliyana</h1>
 
 </body>
 </html>
