add css inline style color using class

--- a/index.html
+++ b/index.html
@@ -8,15 +8,26 @@
     <title>Document</title>
 
     <style type="text/css">
-        h1{/* Selectors */
+        .my-name{/* Selectors */
             color: maroon;
+        }
+        h1{
+            color: blue;
+        }
+        p{
+            color: green;
         }
     </style>
 </head>
 <body>
 
-<h1>My name is : Chinthaka Weerasekara</h1>
-<h1>My address is : Pepiliyana</h1>
+<h1 class="my-name">My name is : Chinthaka Weerasekara</h1>
+<h1>Address : Pepiliyana</h1>
+
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci aliquam commodi culpa debitis explicabo ipsum,
+    iusto laborum officia perferendis?
+</p>
 
 </body>
 </html>
