add css inline style color using class

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         .my-name{/* Selectors */
             color: maroon;
         }
-        h1{
-            color: blue;
+        .my-address{
+            color: navy;
         }
         p{
             color: green;
@@ -22,7 +22,7 @@
 <body>
 
 <h1 class="my-name">My name is : Chinthaka Weerasekara</h1>
-<h1>Address : Pepiliyana</h1>
+<h1 class="my-address">Address : Pepiliyana</h1>
 
 <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci aliquam commodi culpa debitis explicabo ipsum,
