--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Document</title>
 
     <style type="text/css">
+
+        .detail{
+            text-transform: uppercase;
+        }
         .my-name{/* Selectors */
             color: maroon;
         }
@@ -21,8 +25,8 @@
 </head>
 <body>
 
-<h1 class="my-name">My name is : Chinthaka Weerasekara</h1>
-<h1 class="my-address">Address : Pepiliyana</h1>
+<h1 class="my-name detail">My name is : Chinthaka Weerasekara</h1>
+<h1 class="my-address detail">Address : Pepiliyana</h1>
 
 <p>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad adipisci aliquam commodi culpa debitis explicabo ipsum,
