adjective & child selectors

--- a/index.html
+++ b/index.html
@@ -30,10 +30,22 @@
     }
     */
 
-    /*Descendent Selector*/
+    /*!*Descendent Selector*!
     .outer h1{
         color: red;
+    }*/
+
+    /*!*Child Selector*!
+    .outer>h1{
+        color: red;
+    }*/
+
+    /*Adjective Selector*/
+    p + h1 {
+        color: red;
     }
+
+
 
     </style>
 </head>
@@ -50,15 +62,18 @@
     iusto laborum officia perferendis?
 </p>-->
 
-<div class="outer">
+<!--<div class="outer">
     <h1>Chinthaka Weerasekara</h1>
     <h1>Chinthaka Weerasekara</h1>
     <div class="inner">
         <h1>Pepiliyana</h1>
         <h1>Pepiliyana</h1>
     </div>
-</div>
+</div>-->
 
+<p>Lorem ipsum dolor sit amet.</p>
+<h1>Chinthaka</h1>
+<h1>Pepiliyana</h1>
 
 
 </body>
