attribute & universal selectors

--- a/index.html
+++ b/index.html
@@ -40,10 +40,21 @@
         color: red;
     }*/
 
-    /*Adjective Selector*/
+    /*!*Adjective Selector*!
     p + h1 {
         color: red;
+    }*/
+
+    /*
+    !*Attribute Selector*!
+    input[type="text"]{
+        border: 1px solid red;
     }
+
+    !*Universal Selector*!
+    *{
+        color: red;
+    }*/
 
 
 
@@ -71,10 +82,17 @@
     </div>
 </div>-->
 
-<p>Lorem ipsum dolor sit amet.</p>
+<!--<p>Lorem ipsum dolor sit amet.</p>
 <h1>Chinthaka</h1>
-<h1>Pepiliyana</h1>
+<h1>Pepiliyana</h1>-->
 
+<!--<input type="text" placeholder="username">
+&nbsp;
+<input type="password" placeholder="password">
+&nbsp;
+<input type="search">
+<h1>Nimal</h1>
+<p>Panadura </p>-->
 
 </body>
 </html>
