--- a/index.html
+++ b/index.html
@@ -56,6 +56,11 @@
         color: red;
     }*/
 
+    /*!*Siblin Selector*!
+    p ~ h1{
+        color: red;
+        }*/
+
 
 
     </style>
@@ -93,6 +98,13 @@
 <input type="search">
 <h1>Nimal</h1>
 <p>Panadura </p>-->
+
+<!--<p>Lorem ipsum dolor sit amet,
+    consectetur adipisicing elit. Obcaecati, suscipit?</p>
+<h1>Chinthaka</h1>
+<h1>Pepiliyana</h1>-->
+
+
 
 </body>
 </html>
