nth-child selector

--- a/index.html
+++ b/index.html
@@ -61,7 +61,25 @@
         color: red;
         }*/
 
-
+    /*nth chil selector
+    li:nth-child(1){
+        color: red;
+    }
+    li:first-child{
+        color: blue;
+    }
+    li:nth-child(5){
+        color: red;
+    }
+    li:last-child{
+        color: blue;
+    }
+    li:nth-child(odd){
+        color: red;
+    }
+    li:nth-child(even){
+        color: red;
+    }*/
 
     </style>
 </head>
@@ -85,7 +103,7 @@
         <h1>Pepiliyana</h1>
         <h1>Pepiliyana</h1>
     </div>
-</div>-->
+</div>--> 
 
 <!--<p>Lorem ipsum dolor sit amet.</p>
 <h1>Chinthaka</h1>
@@ -104,7 +122,13 @@
 <h1>Chinthaka</h1>
 <h1>Pepiliyana</h1>-->
 
-
+<!--<ul>
+    <li>Java</li>
+    <li>C#</li>
+    <li>Php</li>
+    <li>Ruby</li>
+    <li>Kotlin</li>
+</ul>-->
 
 </body>
 </html>
