--- a/index.html
+++ b/index.html
@@ -81,6 +81,10 @@
         color: red;
     }*/
 
+    p:not(.name){
+        color: red;
+    }
+
     </style>
 </head>
 <body>
@@ -129,6 +133,11 @@
     <li>Ruby</li>
     <li>Kotlin</li>
 </ul>-->
+
+<p class="name">Chinthaka</p>
+<p class="address">Pepiliyana</p>
+
+
 
 </body>
 </html>
