not, start, end & contains attributes

--- a/index.html
+++ b/index.html
@@ -81,9 +81,25 @@
         color: red;
     }*/
 
-    p:not(.name){
-        color: red;
-    }
+    /*    !*Not*!
+        p:not(.name){
+            color: red;
+        }
+
+        !*Start*!
+        a[href^="https://"]{
+            color: blue;
+        }
+
+        !*End*!
+        img[src$=".png"]{
+            border: 1px solid red;
+        }
+
+        !*Contains*!
+        a[href*="google"]{
+            color: yellow;
+        }*/
 
     </style>
 </head>
@@ -134,9 +150,16 @@
     <li>Kotlin</li>
 </ul>-->
 
-<p class="name">Chinthaka</p>
+<!--<p class="name">Chinthaka</p>
 <p class="address">Pepiliyana</p>
 
+<a href="https://www.google.com">Google</a><br>
+<a href="http://www.scam.lk">Scam</a>
+<br>
+
+<img src="dog1.jpg" alt="" width="100">
+<br>
+<img src="dog2.png" alt="" width="100">-->
 
 
 </body>
