--- a/index.html
+++ b/index.html
@@ -101,6 +101,25 @@
             color: yellow;
         }*/
 
+    div{
+        width: 250px;
+        height: 250px;
+        /*border-width: 1px;
+        border-color: blue;
+        border-style: dashed;*/
+        border: 1px solid red;
+        /*margin-top: 50px;
+        margin-left: 50px;*/
+        /*margin: 50px 0 0 50px;*/
+        /*margin: 50px 20px;*/
+        margin: 50px;
+        /*padding-top: 50px;
+        padding-left: 50px;*/
+        /*padding: 50px 0 0 50px;*/
+        /*padding: 50px 20px;*/
+        padding: 50px;
+    }
+
     </style>
 </head>
 <body>
@@ -161,6 +180,9 @@
 <br>
 <img src="dog2.png" alt="" width="100">-->
 
+<div>
+    <h1>Nimal</h1>
+</div>
 
 </body>
 </html>
