--- a/index.html
+++ b/index.html
@@ -101,24 +101,32 @@
             color: yellow;
         }*/
 
-    div{
+    /*div{
         width: 250px;
         height: 250px;
-        /*border-width: 1px;
+        !*border-width: 1px;
         border-color: blue;
-        border-style: dashed;*/
+        border-style: dashed;*!
         border: 1px solid red;
-        /*margin-top: 50px;
-        margin-left: 50px;*/
-        /*margin: 50px 0 0 50px;*/
-        /*margin: 50px 20px;*/
+        !*margin-top: 50px;
+        margin-left: 50px;*!
+        !*margin: 50px 0 0 50px;*!
+        !*margin: 50px 20px;*!
         margin: 50px;
-        /*padding-top: 50px;
-        padding-left: 50px;*/
-        /*padding: 50px 0 0 50px;*/
-        /*padding: 50px 20px;*/
+        !*padding-top: 50px;
+        padding-left: 50px;*!
+        !*padding: 50px 0 0 50px;*!
+        !*padding: 50px 20px;*!
         padding: 50px;
+    }*/
+
+    /*div{
+        background-color: rgba(255,45,255, 0.2);
+        !*opacity: 0.2;*!
     }
+    h1{
+        !*color: white;*!
+    }*/
 
     </style>
 </head>
@@ -180,9 +188,14 @@
 <br>
 <img src="dog2.png" alt="" width="100">-->
 
-<div>
+<!--<div>
     <h1>Nimal</h1>
-</div>
+</div>-->
+
+<!--<div>
+    <h1>Chinthaka Weerasekara</h1>
+</div>-->
+
 
 </body>
 </html>
