--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+
     <style type="text/css">
     /*        .detail{
             text-transform: uppercase;
@@ -128,6 +132,10 @@
         !*color: white;*!
     }*/
 
+    h1{
+        font-family: 'Pacifico', cursive;
+    }
+
     </style>
 </head>
 <body>
@@ -196,6 +204,7 @@
     <h1>Chinthaka Weerasekara</h1>
 </div>-->
 
+<h1>Chinthaka</h1>
 
 </body>
 </html>
