change font attributes

--- a/index.html
+++ b/index.html
@@ -7,11 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-
     <style type="text/css">
+        @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
     /*        .detail{
             text-transform: uppercase;
         }
@@ -132,8 +129,14 @@
         !*color: white;*!
     }*/
 
-    h1{
-        font-family: 'Pacifico', cursive;
+    p{
+        /*font-family: 'Pacifico', cursive;*/
+        /*font-size: 250px;*/
+        font-size: 50px;
+        font-weight: 700; /*Sass*/
+        font-style: italic;
+        line-height: 60px;
+        text-transform: uppercase;
     }
 
     </style>
@@ -205,6 +208,7 @@
 </div>-->
 
 <h1>Chinthaka</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consectetur consequuntur cumque, debitis eligendi eveniet expedita facilis iure laborum mollitia nesciunt non nulla numquam reiciendis similique? A dolorum eum fugit sit tempora unde veritatis! Corporis incidunt non placeat. A aspernatur cum deleniti deserunt fuga illo natus perferendis suscipit veritatis vitae.</p>
 
 </body>
 </html>
