--- a/index.html
+++ b/index.html
@@ -186,6 +186,32 @@
     }*/
 
     /*Sticky*/
+    div {
+        width: 150px;
+        height: 150px;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .div1{
+        position: absolute;
+        /*margin-left: 100px;*/
+        right: 0;
+        bottom: 0;
+        z-index: 1;
+    }
+    .div2{
+        position: fixed;
+        /*right: 0;*/
+        bottom: 0;
+        z-index: 3;
+    }
+    .div3{
+        position: sticky;
+        top: 0;
+        margin-top: 200px;
+    }
 
 
 
