scroll bar style

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
         margin-top: 200px;
     }*/
 
-    /*Relative*/
+    /*!*Relative*!
     .outer{
         width: 500px;
         height: 250px;
@@ -226,6 +226,24 @@
         background-color: green;
         position: absolute;
         right: 0;
+    }*/
+
+    .outer{
+        width: 500px;
+        height: 250px;
+        border: 1px solid red;
+        /*overflow-x: scroll;*/
+        /*overflow-y: scroll;*/
+        text-align: justify;
+        overflow: auto;
+    }
+    .outer::-webkit-scrollbar{
+        width: 10px;
+        background-color: gray;
+    }
+    .outer::-webkit-scrollbar-thumb{
+        background-color: red;
+        border-radius: 10px;
     }
 
 
@@ -300,11 +318,24 @@
 <!--<h1>Chinthaka</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consectetur consequuntur cumque, debitis eligendi eveniet expedita facilis iure laborum mollitia nesciunt non nulla numquam reiciendis similique? A dolorum eum fugit sit tempora unde veritatis! Corporis incidunt non placeat. A aspernatur cum deleniti deserunt fuga illo natus perferendis suscipit veritatis vitae.</p>-->
 
-<div class="outer">
+<!--div class="outer">
     <div class="inner">
 
     </div>
+</div>-->
+
+<div class="outer">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda cum eligendi mollitia officia. Ab alias assumenda corporis ea error exercitationem expedita iste, magnam mollitia necessitatibus nisi, nulla, placeat quae quaerat quibusdam repellat unde voluptates. A amet, autem cum debitis dolorum eum, ex facilis maiores maxime molestias officia quibusdam quos veniam!
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aliquam amet aperiam at atque blanditiis cupiditate deleniti distinctio dolor dolore doloremque doloribus dolorum eum eveniet id incidunt, ipsa libero maiores mollitia odio officia pariatur possimus quisquam recusandae sapiente sequi similique, soluta sunt suscipit vitae! Cupiditate magnam quidem unde. Porro, quis.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deserunt dolor, esse illum labore magnam mollitia, nulla numquam quis similique tenetur ullam voluptates. Accusamus alias ipsam iure libero maxime, minima natus neque odio perferendis quaerat, qui, quo reiciendis sit unde voluptatum! Consequuntur id impedit nam nesciunt nisi quisquam veritatis voluptatum.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deserunt dolor, esse illum labore magnam mollitia, nulla numquam quis similique tenetur ullam voluptates. Accusamus alias ipsam iure libero maxime, minima natus neque odio perferendis quaerat, qui, quo reiciendis sit unde voluptatum! Consequuntur id impedit nam nesciunt nisi quisquam veritatis voluptatum.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deserunt dolor, esse illum labore magnam mollitia, nulla numquam quis similique tenetur ullam voluptates. Accusamus alias ipsam iure libero maxime, minima natus neque odio perferendis quaerat, qui, quo reiciendis sit unde voluptatum! Consequuntur id impedit nam nesciunt nisi quisquam veritatis voluptatum.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deserunt dolor, esse illum labore magnam mollitia, nulla numquam quis similique tenetur ullam voluptates. Accusamus alias ipsam iure libero maxime, minima natus neque odio perferendis quaerat, qui, quo reiciendis sit unde voluptatum! Consequuntur id impedit nam nesciunt nisi quisquam veritatis voluptatum.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deserunt dolor, esse illum labore magnam mollitia, nulla numquam quis similique tenetur ullam voluptates. Accusamus alias ipsam iure libero maxime, minima natus neque odio perferendis quaerat, qui, quo reiciendis sit unde voluptatum! Consequuntur id impedit nam nesciunt nisi quisquam veritatis voluptatum.
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi deserunt dolor, esse illum labore magnam mollitia, nulla numquam quis similique tenetur ullam voluptates. Accusamus alias ipsam iure libero maxime, minima natus neque odio perferendis quaerat, qui, quo reiciendis sit unde voluptatum! Consequuntur id impedit nam nesciunt nisi quisquam veritatis voluptatum.
 </div>
+
+
 
 </body>
 </html>
