--- a/index.html
+++ b/index.html
@@ -263,14 +263,26 @@
     }*/
 
     /*Shapes*/
-    .box{
+    /*.box{
         width: 150px;
         height: 150px;
         background-color: #55efc4;
         clip-path: polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%);
+    }*/
+
+    /*span{
+        display: block;
+        background-color: brown;
+    }*/
+    div{
+        background-color: brown;
+        /*display: inline;*/
+        /*display: inline-block;*/
+        display: none;
+        width: 580px;
+        height: 200px;
+
     }
-
-
 
     </style>
 </head>
@@ -363,8 +375,14 @@
 <!--<div class="box">
 </div>-->
 
-<div class="box"></div>
+<!--<div class="box">
+</div>-->
 
+<!--<span>China</span>
+<span>Weer</span>-->
+
+<div>Chinthaka</div>
+<div>Sampath</div>
 
 
 
