--- a/index.html
+++ b/index.html
@@ -345,6 +345,15 @@
             float: right;
         }*/
 
+    .box{
+        width: 500px;
+        height: 320px;
+        border: 1px solid red;
+        /*background: radial-gradient(circle, #00cec9, #6c5ce7);*/
+        background: linear-gradient(to bottom, #00cec9, #6c5ce7);
+        transform: rotate(230deg);
+    }
+
 
 
     </style>
@@ -455,6 +464,7 @@
 <!--<div class="box box-1"></div>
 <div class="box box-2"></div>-->
 
+<div class="box"></div>
 
 </body>
 </html>
