background functions single line

--- a/index.html
+++ b/index.html
@@ -350,8 +350,9 @@
         height: 320px;
         border: 1px solid red;
         /*background: radial-gradient(circle, #00cec9, #6c5ce7);*/
-        background: linear-gradient(to bottom, #00cec9, #6c5ce7);
-        transform: rotate(230deg);
+        /*background: linear-gradient(to bottom, #00cec9, #6c5ce7);
+        transform: rotate(230deg);*/
+        background: url("//") no-repeat center / cover;
     }
 
 
