--- a/index.html
+++ b/index.html
@@ -345,14 +345,27 @@
             float: right;
         }*/
 
-    .box{
+    /*.box{
         width: 500px;
         height: 320px;
         border: 1px solid red;
-        /*background: radial-gradient(circle, #00cec9, #6c5ce7);*/
-        /*background: linear-gradient(to bottom, #00cec9, #6c5ce7);
-        transform: rotate(230deg);*/
+        !*background: radial-gradient(circle, #00cec9, #6c5ce7);*!
+        !*background: linear-gradient(to bottom, #00cec9, #6c5ce7);
+        transform: rotate(230deg);*!
         background: url("//") no-repeat center / cover;
+    }*/
+
+    img{
+        transition: 1s ease-in;
+    }
+
+    img:hover{
+        /*transform: scale(2) rotate(360deg);*/
+        /*transform: translateX(250px);
+        transform: translateX(-250px);*/
+        /*transform: translateY(250px);
+        transform: translateY(-250px);*/
+        /*transform: translate(250px, 200px);*/
     }
 
 
@@ -465,7 +478,10 @@
 <!--<div class="box box-1"></div>
 <div class="box box-2"></div>-->
 
-<div class="box"></div>
+<!--<div class="box">
+</div>-->
+
+<img src="dog2.png" alt="" width="260">
 
 </body>
 </html>
