--- a/index.html
+++ b/index.html
@@ -368,17 +368,35 @@
         !*transform: translate(250px, 200px);*!
     }*/
 
-    div{
+    /*div{
         transition: 1s ease-in;
         background-color: green;
         width: 500px;
         height: 100px;
     }
     div:hover{
-        /*transform: skew(60deg, 40deg);*/
+        !*transform: skew(60deg, 40deg);*!
         transform: perspective(500px) rotate(50deg);
-    }
+    }*/
 
+    a{
+        text-decoration: none;
+    }
+    h1{
+        text-decoration: underline;
+    }
+    h2{
+        text-decoration: overline;
+    }
+    h3{
+       text-decoration: line-through;
+    }
+    h4{
+        text-decoration: underline overline;
+    }
+    p{
+        text-decoration: underline dashed red;
+    }
 
     </style>
 </head>
@@ -493,7 +511,19 @@
 
 <!--<img src="dog2.png" alt="" width="260">-->
 
-<div></div>
+<!--<div>
+
+</div>-->
+
+<div>
+    <a href="#">Click here to navigate the Website</a>
+    <h1>My name is Chinthaka</h1>
+    <h2>Sanath Nishantha</h2>
+    <h3><del>Chinthaka</del></h3>
+    <h3>Sampath</h3>
+    <h4>Weerasekara</h4>
+    <p>Lorem ipsum dolor sit amet.</p>
+</div>
 
 </body>
 </html>
