--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
         transform: perspective(500px) rotate(50deg);
     }*/
 
-    a{
+    /*a{
         text-decoration: none;
     }
     h1{
@@ -396,7 +396,17 @@
     }
     p{
         text-decoration: underline dashed red;
+    }*/
+
+    /*.desc{
+        !*text-transform: lowercase;*!
+        !*text-transform: uppercase;*!
+        !*text-transform: capitalize;*!
+        !*text-transform: initial;*!
     }
+    span{
+        text-transform: inherit;
+    }*/
 
     </style>
 </head>
@@ -515,15 +525,27 @@
 
 </div>-->
 
-<div>
+<!--<div>
     <a href="#">Click here to navigate the Website</a>
     <h1>My name is Chinthaka</h1>
-    <h2>Sanath Nishantha</h2>
+    <h2>Sanath Nishantha : </h2>
     <h3><del>Chinthaka</del></h3>
     <h3>Sampath</h3>
     <h4>Weerasekara</h4>
     <p>Lorem ipsum dolor sit amet.</p>
-</div>
+</div>-->
+
+<!--<div>
+    <p class="desc">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid corporis cum cumque harum nihil quae quos
+        saepe tenetur. Aliquam, doloremque.
+        <span>
+            Chinthaka
+        </span>
+    </p>
+</div>-->
+
+
 
 </body>
 </html>
