--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
             order: 2;
         }*/
 
-        .box{
+        /*.box{
             width: 100px;
             height: 100px;
             background-color: green;
-            /*transition: 1s;*/
+            !*transition: 1s;*!
             transition: background-color 1s, width 2s, height 5s;
         }
         .box:hover{
@@ -64,6 +64,14 @@
             width: 200px;
             height: 200px;
 
+        }*/
+
+        .box{
+            width: 100px;
+            height: 100px;
+            background-color: green;
+            border: 1px solid red;
+            outline: 3px dashed blue;
         }
 
 
