--- a/index.html
+++ b/index.html
@@ -66,12 +66,22 @@
 
         }*/
 
-        .box{
+        /*.box{
             width: 100px;
             height: 100px;
             background-color: green;
             border: 1px solid red;
             outline: 3px dashed blue;
+        }*/
+
+        .box{
+            width: 100px;
+            height: 100px;
+            background-color: green;
+            /*border: 1px solid red;
+            outline: 3px dashed blue;*/
+            background-color: #1abc9c;
+            box-shadow: 5px 5px 4px rgba(26,188,156,0.5);
         }
 
 
