--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             box-shadow: 5px 5px 4px rgba(26,188,156,0.5);
         }*/
 
-        @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+        /*@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
         .text{
             font-size: 30px;
             font-weight: bold;
@@ -92,7 +92,7 @@
             color: rgb(22,160,133);
             text-shadow: 3px 3px 2px rgb(52,73,94);
             animation: typing 3s steps(30) infinite;
-            /*border: 1px solid red;*/
+            !*border: 1px solid red;*!
             overflow: hidden;
             white-space: nowrap;
             padding-right: 5px;
@@ -106,7 +106,29 @@
             100%{
                 width: 350px;
             }
-        }
+        }*/
+
+        /*@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+        .text{
+            font-size: 20px;
+            font-family: 'Kanit', sans-serif;
+            color: white;
+            background-color: rgb(26, 188, 156);
+            padding: 15px 5px;
+            position: fixed;
+            right: 0;
+            top: 50vh;
+            text-orientation: sideways;
+            border-top-left-radius: 20px;
+            border-bottom-left-radius: 20px;
+            writing-mode: vertical-rl;
+            white-space: nowrap;
+            !*transform: rotate(90deg);*!
+        }*/
+
+
+
+
 
 
 
