--- a/index.html
+++ b/index.html
@@ -126,6 +126,14 @@
             !*transform: rotate(90deg);*!
         }*/
 
+        .text{
+            column-count: 3;
+            column-gap: 50px;
+        }
+        p{
+            text-align: justify;
+        }
+
 
 
 
@@ -143,8 +151,16 @@
     </div>
 </div>-->
 
-<div class="text">
+<!--<div class="text">
     Developers Stack
+</div>-->
+
+<div class="text">
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dicta quis rem unde vitae? Asperiores porro repellat suscipit vero vitae.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dicta quis rem unde vitae? Asperiores porro repellat suscipit vero vitae.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dicta quis rem unde vitae? Asperiores porro repellat suscipit vero vitae.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dicta quis rem unde vitae? Asperiores porro repellat suscipit vero vitae.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dicta quis rem unde vitae? Asperiores porro repellat suscipit vero vitae.</p>
 </div>
 
 </body>
