--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         }*/
 
         .text{
+            row-gap: 20px;
             column-count: 3;
             column-gap: 50px;
         }
