--- a/index.html
+++ b/index.html
@@ -126,13 +126,49 @@
             !*transform: rotate(90deg);*!
         }*/
 
-        .text{
+        /*.text{
             row-gap: 20px;
             column-count: 3;
             column-gap: 50px;
         }
         p{
             text-align: justify;
+        }*/
+
+        /*@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+        !*--webkit- : chrome,safari*!
+        !*--o- : opera*!
+        !*--moz- : firefox*!
+        !*--ms- : Ms edg*!
+        .box{
+            -ms-overflow-x: hidden;
+            -o-background-image: url("#");
+            -moz-background-image: url("#");
+            -webkit-align-items: center;
+        }*/
+
+        @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+        .box{
+            width: 250px;
+            height: 120px;
+            margin-bottom: 20px;
+            background-size: cover;
+            background-image: url("https://images.unsplash.com/photo-1432405972618-c60b0225b8f9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8d2F0ZXJmYWxsfGVufDB8fDB8fHww&w=1000&q=80");
+        }
+        .b1{
+            filter: blur(2px);
+        }
+        .b2{
+            filter: brightness(30%);
+        }
+        .b3{
+            filter: grayscale(100%);
+        }
+        .b4{
+            filter: contrast(200%);
+        }
+        .b5{
+            filter: saturate(50%);
         }
 
 
@@ -156,13 +192,22 @@
     Developers Stack
 </div>-->
 
-<div class="text">
+<!--<div class="text">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dicta quis rem unde vitae? Asperiores porro repellat suscipit vero vitae.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dicta quis rem unde vitae? Asperiores porro repellat suscipit vero vitae.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dicta quis rem unde vitae? Asperiores porro repellat suscipit vero vitae.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dicta quis rem unde vitae? Asperiores porro repellat suscipit vero vitae.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dicta quis rem unde vitae? Asperiores porro repellat suscipit vero vitae.</p>
-</div>
+</div>-->
+
+<div class="box b1"></div>
+<div class="box b2"></div>
+<div class="box b3"></div>
+<div class="box b4"></div>
+<div class="box b5"></div>
+<div class="box b6"></div>
+<div class="box b7"></div>
+<div class="box b8"></div>
 
 </body>
 </html>
