--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             -webkit-align-items: center;
         }*/
 
-        @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+        /*@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
         .box{
             width: 250px;
             height: 120px;
@@ -169,11 +169,18 @@
         }
         .b5{
             filter: saturate(50%);
+        }*/
+
+        @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+        .haha::before{
+            content: open-quote;
         }
-
-
-
-
+        .haha:after{
+            content: close-quote;
+        }
+        .india::after{
+            content: " 😀";
+        }
 
 
 
@@ -200,14 +207,17 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dicta quis rem unde vitae? Asperiores porro repellat suscipit vero vitae.</p>
 </div>-->
 
-<div class="box b1"></div>
+<!--<div class="box b1"></div>
 <div class="box b2"></div>
 <div class="box b3"></div>
 <div class="box b4"></div>
 <div class="box b5"></div>
 <div class="box b6"></div>
 <div class="box b7"></div>
-<div class="box b8"></div>
+<div class="box b8"></div>-->
+
+<h1 class="haha">Sri Lanka</h1>
+<h1 class="india">India</h1>
 
 </body>
 </html>
