--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             filter: saturate(50%);
         }*/
 
-        @import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+        /*@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
         .haha::before{
             content: open-quote;
         }
@@ -180,8 +180,33 @@
         }
         .india::after{
             content: " 😀";
-        }
+        }*/
 
+        /*!*transition base animation*!
+        h1{
+            color: blue;
+            transition: color 2s;
+        }
+        h1:hover{
+            color: brown;
+        }*/
+
+        /*keyframe base animations*/
+        .box{
+            width: 150px;
+            height: 150px;
+            background-color: green;
+            animation: fade 3s;
+        }
+        @keyframes fade  {
+            0%{
+                opacity: 0;
+            }
+            100%{
+                opacity: 1;
+            }
+
+        }
 
 
     </style>
@@ -216,8 +241,14 @@
 <div class="box b7"></div>
 <div class="box b8"></div>-->
 
-<h1 class="haha">Sri Lanka</h1>
-<h1 class="india">India</h1>
+<!--<h1 class="haha">Sri Lanka</h1>
+<h1 class="india">India</h1>-->
+
+<!--<h1>Saman</h1>-->
+
+<div class="box">
+
+</div>
 
 </body>
 </html>
