--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
         }*/
 
-        .box{
+        /*.box{
             width: 150px;
             height: 150px;
             background-color: green;
@@ -220,6 +220,28 @@
             }
             100%{
                 transform: rotate(360deg);
+            }
+
+        }*/
+
+        .box{
+            width: 150px;
+            height: 150px;
+            background-color: green;
+            animation: rotate 3s linear infinite;
+        }
+        @keyframes rotate {
+            0%{
+                transform: scale(1);
+                background-color: green;
+            }
+            50%{
+                transform: scale(1.5);
+                background-color: brown;
+            }
+            100%{
+                transform: scale(1);
+                background-color: green;
             }
 
         }
@@ -264,9 +286,14 @@
 
 <!--<h1>Saman</h1>-->
 
-<div class="box">
+<div class="out" style="width: 100%;
+     height: 100vh;display: flex;
+     align-items: center;justify-content: center">
+    <div class="box">
 
+    </div>
 </div>
+
 
 </body>
 </html>
