--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
         }*/
 
-        .box{
+        /*.box{
             width: 150px;
             height: 150px;
             background-color: green;
@@ -242,6 +242,44 @@
             100%{
                 transform: scale(1);
                 background-color: green;
+            }
+
+        }*/
+
+        .box{
+            width: 80px;
+            height: 80px;
+            background-color: rgb(26,188,156);
+            border-radius: 100%;
+            display: flex;align-items: center;justify-content: center;
+            color: white;
+        }
+        .box-1{
+            animation: bounce 3s linear infinite;
+        }
+        .box-2{
+            animation: bounce 3s ease infinite;
+        }
+        .box-3{
+            animation: bounce 3s ease-in infinite;
+        }
+        .box-4{
+            animation: bounce 3s ease-out infinite;
+        }
+        .box-5{
+            animation: bounce 3s ease-in-out infinite;
+        }
+        @keyframes bounce {
+            0%{
+                transform: translateY(0);
+                box-shadow: 0 4px 2px rgba(26,188,156, 0.5);
+            }
+            50%{
+                transform: translateY(-100px);
+            }
+            100%{
+                transform: translateY(0);
+                box-shadow: 0 4px 2px rgba(26,188,156, 0.5);
             }
 
         }
@@ -286,13 +324,25 @@
 
 <!--<h1>Saman</h1>-->
 
-<div class="out" style="width: 100%;
+<!--<div class="out" style="width: 100%;
      height: 100vh;display: flex;
      align-items: center;justify-content: center">
     <div class="box">
-
     </div>
+</div>-->
+
+<div class="outer" style="width: 100%;
+border-bottom: 2px solid black;
+ height: 100vh;display: flex;
+    align-items: flex-end;justify-content: center">
+    <div class="box box-1">linear</div>
+    <div class="box box-2">ease</div>
+    <div class="box box-3">ease-in</div>
+    <div class="box box-4">ease-out</div>
+    <div class="box box-5">ease-in-out</div>
 </div>
+
+
 
 
 </body>
